bootstrap-sass added

--- a/bower.json
+++ b/bower.json
@@ -16,31 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.6",
+    "bootstrap-sass": "^3.3.6",
     "jquery": "^2.2.1",
     "mozilla-tabzilla": "^0.5.1"
-  },
-  "overrides": {
-    "bootstrap": {
-      "main": [
-        "./dist/css/bootstrap.min.css",
-        "./dist/js/bootstrap.min.js",
-        "./dist/fonts/*.*"
-      ]
-    },
-    "jquery": {
-      "main": [
-        "dist/jquery.min.js"
-      ]
-    },
-    "mozilla-tabzilla": {
-      "main": [
-        "./css/tabzilla.css",
-        "./media/img/*.*"
-      ],
-      "dependencies": {
-        "bootstrap": "^3.3.6"
-      }
-    }
   }
 }
