--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "onramp",
   "version": "1.0.0",
   "description": "The Firefox Onramp quickstart project",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,10 +21,15 @@
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^3.1.0",
     "gulp-filter": "^4.0.0",
+    "gulp-flatten": "^0.2.0",
+    "gulp-html-minifier": "^0.1.8",
     "gulp-jade": "^1.1.0",
     "gulp-jslint": "^0.2.2",
     "gulp-main-bower-files": "^1.3.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-uglifycss": "^1.0.6",
     "jade": "^1.11.0"
   }
 }
